--- a/package.json
+++ b/package.json
@@ -9,16 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@prisma/client": "^3.11.1",
+    "apollo-server-micro": "^3.6.7",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.4.2",
+    "cookies": "^0.8.0",
+    "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
+    "superjson": "^1.8.1",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "autoprefixer": "^10.4.4",
+    "babel-plugin-superjson-next": "^0.4.3",
     "eslint": "8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.2",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.1",
+    "prisma": "^3.11.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
   }
 }
